Agregado de mapas y tema

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 # Archivos que no son necesarios subir al repositorio
 Copia_de_Segunda_entrega_analitica__Acevedo_Gomez_Manco_Zuluaga.ipynb
 copia_de_segunda_entrega_analitica__acevedo_gomez_manco_zuluaga.py
+scatterplot_layer.html
