--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#457b9d"
-backgroundColor="#f1faee"
-secondaryBackgroundColor="#a8dadc"
-textColor="#1d3557"
+primaryColor="#BFDBF7"
+backgroundColor="#022B3A"
+secondaryBackgroundColor="#1F7A8C"
+textColor="#E1E5F2"
 font="serif"
