--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#BFDBF7"
 backgroundColor="#022B3A"
-secondaryBackgroundColor="#1F7A8C"
+secondaryBackgroundColor="#F0F2F6"
 textColor="#E1E5F2"
 font="serif"
