Agregado de las conclusiones de la segunda entrega

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # Archivos que no son necesarios subir al repositorio
 segunda_entrega_analitica__acevedo_gomez_manco_zuluaga.py
+(1)Segunda_entrega_analitica__Acevedo_Gomez_Manco_Zuluaga.ipynb
